lib_LTLIBRARIES = libaoloopcontrol.la
libaoloopcontrol_la_SOURCES = AOloopControl.c AOloopControl.h
libaoloopcontrol_la_SOURCES += AOloopControl_wfs_dm.c
libaoloopcontrol_la_SOURCES += AOloopControl_loop_ctr.c
libaoloopcontrol_la_SOURCES += AOloopControl_loop_onoff.c

EXTRA_DIST = doc scripts

AM_CPPFLAGS = -I@abs_top_srcdir@/src -fopenmp
