lib_LTLIBRARIES = libaoloopcontrol.la
libaoloopcontrol_la_SOURCES = AOloopControl.c AOloopControl.h
libaoloopcontrol_la_SOURCES += AOloopControl_wfs_dm.c
libaoloopcontrol_la_SOURCES += AOloopControl_loop_ctr.c
libaoloopcontrol_la_SOURCES += AOloopControl_loop_onoff.c
libaoloopcontrol_la_SOURCES += AOloopControl_dmwrite.c
libaoloopcontrol_la_SOURCES += AOloopControl_autotune.c
libaoloopcontrol_la_SOURCES += AOloopControl_arpf_onoff.c
libaoloopcontrol_la_SOURCES += AOloopControl_time_param.c
libaoloopcontrol_la_SOURCES += AOloopControl_loop_param.c
libaoloopcontrol_la_SOURCES += AOloopControl_fpspeckle_mod.c
libaoloopcontrol_la_SOURCES += AOloopControl_process_files.c
libaoloopcontrol_la_SOURCES += AOloopControl_loadconfigure.c


EXTRA_DIST = doc scripts

AM_CPPFLAGS = -I@abs_top_srcdir@/src -fopenmp
