lib_LTLIBRARIES = libaoloopcontrol.la
libaoloopcontrol_la_SOURCES = AOloopControl.c AOloopControl.h
libaoloopcontrol_la_SOURCES += AOloopControl_AOcompute.c
libaoloopcontrol_la_SOURCES += AOloopControl_aorun.c
libaoloopcontrol_la_SOURCES += AOloopControl_arpf_onoff.c
libaoloopcontrol_la_SOURCES += AOloopControl_autotune.c
libaoloopcontrol_la_SOURCES += AOloopControl_AutoTuneGains.c
libaoloopcontrol_la_SOURCES += AOloopControl_CompModes_loop.c
libaoloopcontrol_la_SOURCES += AOloopControl_ComputeOpenLoopModes.c
libaoloopcontrol_la_SOURCES += AOloopControl_dm.c
libaoloopcontrol_la_SOURCES += AOloopControl_dmwrite.c
libaoloopcontrol_la_SOURCES += AOloopControl_fpspeckle_mod.c
libaoloopcontrol_la_SOURCES += AOloopControl_initmem.c
libaoloopcontrol_la_SOURCES += AOloopControl_loadconfigure.c
libaoloopcontrol_la_SOURCES += AOloopControl_loop_ctr.c
libaoloopcontrol_la_SOURCES += AOloopControl_loop_onoff.c
libaoloopcontrol_la_SOURCES += AOloopControl_loop_param.c
libaoloopcontrol_la_SOURCES += AOloopControl_process_files.c
libaoloopcontrol_la_SOURCES += AOloopControl_read_param.c 
libaoloopcontrol_la_SOURCES += AOloopControl_RTstreamLOG.c
libaoloopcontrol_la_SOURCES += AOloopControl_sig2Modecoeff.c
libaoloopcontrol_la_SOURCES += AOloopControl_time_param.c
libaoloopcontrol_la_SOURCES += AOloopControl_wfs.c

EXTRA_DIST = doc scripts

AM_CPPFLAGS = -I@abs_top_srcdir@/src -fopenmp
