lib_LTLIBRARIES = libaoloopcontroldm.la
libaoloopcontroldm_la_SOURCES = AOloopControl_DM.c AOloopControl_DM.h
libaoloopcontroldm_la_SOURCES += AOloopControl_DM_config.c
libaoloopcontroldm_la_SOURCES += AOloopControl_DM_init.c
libaoloopcontroldm_la_SOURCES += AOloopControl_DM_runtimecomp.c
libaoloopcontroldm_la_SOURCES += AOloopControl_DM_toolbox.c
libaoloopcontroldm_la_SOURCES += AOloopControl_DM_TTcircle_astrogrid.c
libaoloopcontroldm_la_SOURCES += AOloopControl_DM_turbusimul.c


AM_CPPFLAGS = -I@abs_top_srcdir@/src -fopenmp
