lib_LTLIBRARIES = libaoloopcontroliotools.la
libaoloopcontroliotools_la_SOURCES = AOloopControl_IOtools.c AOloopControl_IOtools.h
libaoloopcontroliotools_la_SOURCES += AOloopControl_IOtools_camerainput.c
libaoloopcontroliotools_la_SOURCES += AOloopControl_IOtools_datastream_processing.c
libaoloopcontroliotools_la_SOURCES += AOloopControl_IOtools_load_image_sharedmem.c

EXTRA_DIST = doc

AM_CPPFLAGS = -I@abs_top_srcdir@/src -fopenmp
